added button to update API when pressed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br>
         <p>longitude: <span id="lon"></span></p>
         <br>
-        <p>visibility: <span id="vis">/</span></p>
+        <p>visibility: <span id="vis"></span></p>
         <br>
         <p>timestamp: <span id="time"></span></p>
         <br>
@@ -26,10 +26,11 @@
         <p>ID: <span id="id"></span></p>
         <br>
 
+        <button id="button">update</button>
+        <button id="button" onclick="getData()">UPDATE</button>
 
 
-    </div>
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 
 </body>
 
