--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <!-- leaflet's CSS-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
 </head>
 
 <body>
     <div id="main">
+        <p>name: <span id="name"></span></p><br>
+        <p>ID: <span id="id"></span></p><br>
         <p>latitude: <span id="lat"></span></p>
         <br>
         <p>longitude: <span id="lon"></span></p>
@@ -21,16 +27,16 @@
         <br>
         <p>timestamp: <span id="time"></span></p>
         <br>
-        <p>name: <span id="name"></span></p>
+        <p>altitude: <span id="alt"></span></p>
         <br>
-        <p>ID: <span id="id"></span></p>
-        <br>
-
-        <button id="button">update</button>
         <button id="button" onclick="getData()">UPDATE</button>
+    </div>
+
+    <div id="mapid"></div>
 
 
-        <script src="script.js"></script>
+
+    <script src="script.js"></script>
 
 </body>
 
