adjusted map height and added data to html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>altitude: <span id="alt"></span></p>
 
         <button id="button" onclick="getData()">UPDATE</button>
+        <p>Please hit UPDATE to load then refresh the ISS data</p>
     </div>
 
     <div id="mapid"></div>
